--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-django
-djangorestframework
-django-cors-headers
-yarn
-dotenv
+asgiref==3.2.10
+click==7.1.2
+Django==3.0.8
+django-cors-headers==3.4.0
+djangorestframework==3.11.0
+Pillow==7.2.0
+pytz==2020.1
+sqlparse==0.3.1
+svgwrite==1.4
+yarn==0.0.8
