--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@react-google-maps/api": "^1.9.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.18.1",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.1.1",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.1",
-    "react-google-maps": "^9.4.5",
-    "react-scripts": "3.4.1",
-    "react-sidebar": "^3.0.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
